@startuml

class ToDo {
    + main()
    + start()
}

class CastedUtilityGeneral {
    + addToDoSaveFolder()
    + createTempFolder()
    + removeTempFiles()
    + tempDirec()
    + indexer()
    + checkDateFormat(String)
}

class FileHandler {
    + tasks()
    + renewFileAfterDelete(TaskToDoObj)
    + writeHeader()
    + saveTaskData(LinkedList<TaskToDoObj> list, String selected_path)
    + removeExtraNewLine(File file, String path)
    --
    - readSelectedFile()
    - fileSelectedGenerator()
    - removeTaskFileData()
}

class HelpToDoMenuController {
}

class HelpToDoTaskController {
}

class ListToDoController {
    + public SplitPane mainPane
    + TextField titleToDoTextBox
    + SplitPane splitPane
    + ListView<ListToDoObj> todoList
    + static ListToDoObj pass
    + static ListToDoObj temp
    + ObservableList<ListToDoObj> selected
    + LinkedList<ListToDoObj> allItems
    --
    @FXML
    + addNewToDoButton()
    + deleteToDoButton()
    + editNameToDoButton()
    + listClicked()
    + selectToDoButton()
    + saveList()
    + loadList()
    + helpMenu()
    --
    + addItem(String name)
    + deleteItem(ListToDoObj item)
    + removeFile(int txt)
    + editName(ListToDoObj item)
    + selectToDo(ListToDoObj item)
    + saveSelectedList(ListToDoObj item)
    + loadListFile() throws IOException
    + storeData(ListToDoObj item)
}

class ListToDoHandler {

    + formatFile(File selectedFile, int index)
    + updateFileName(int index, int size)
    + updateIndex(LinkedList<ListToDoObj> every_item)
}

class ListToDoObj {
    - String name
    - static LinkedList<TaskToDoObj> list
    - int amount
    - int index
    --
    + getName()
    + setName(String name)
    + getList()
    + setList(LinkedList<TaskToDoObj> list)
    + getAmount()
    + setAmount(int amount)
    + getIndex()
    + setIndex(int index)
    + ListToDoObj(String name)
    --
    + toString()
}

class SceneController {
    + switchToMenu()
    + switchToTask()
    + menuHelp()
    + taskHelp()
    + savePopUp(String name)
}

class TaskToDoController {
    + SplitPane mainPane
    + SplitPane splitPane
    + TextField descriptionTaskTextBox
    + TextField dateTextBox
    + TextField titleTaskTextBox
    + TextField updateTaskTextBox
    + ListView<String> taskList
    + ObservableList<String> selected
    + LinkedList<TaskToDoObj> tasks
    --
    @FXML
    + listClicked()
    + displayAllTasksButton()
    + displayCompletedTasksButton()
    + displayIncompleteTasksButton()
    + markAsCompleteButton()
    + markAsIncompleteButton()
    + addNewTaskButton()
    + deleteTaskButton()
    + editDescription()
    + changeDate()
    + saveAllToDoButton()
    + goBack()
    + helpTask()
    + refreshButton()
    + clearAll()
    --
    + displayAll()
    + removeAll()
    + addNewTask(String title, String description, String date)
    + deleteTaskStart(String taskToDelete)
    + getTypedTitle()
    + getTypedDate()
    + getTypedDescription()
    + refreshDisplay()
}

class TaskToDoHandler {
    + displayTask(TaskToDoObj task)
    + displayCompleted(TaskToDoObj task, boolean status)
    + displayIncomplete(TaskToDoObj task, boolean status)
    + markAsComplete(TaskToDoObj item)
    + markAsIncomplete(TaskToDoObj item)
    + generateNewTask(LinkedList<TaskToDoObj> list, String title, String description, String date)
    + deleteTask(LinkedList<TaskToDoObj> list, int i)
    + editDescription(TaskToDoObj item, String newDescription)
    + editDate(TaskToDoObj item, String newDate)
    + clearList(LinkedList<TaskToDoObj> list)
    + generalDisplaySetup(TaskToDoObj task)
}

class TaskToDoObj {
    - String name
    - String date
    - String description
    - boolean complete
    --
    + String getName()
    + setName(String name)
    + getDate()
    + setDate(String date)
    + getDescription()
    + setDescription(String description)
    + isComplete()
    + setComplete(boolean complete)
    + TaskToDoObj(name, date, description, complete)
}

ToDo -|> openjfx.Application
ToDo -- ListToDoController

ListToDoController --- FileHandler
ListToDoController --- CastedUtilityGeneral
ListToDoController - SceneController
ListToDoObj - ListToDoController
ListToDoHandler - ListToDoController

TaskToDoController --- FileHandler
TaskToDoController --- CastedUtilityGeneral
TaskToDoController - SceneController
TaskToDoController - TaskToDoHandler
TaskToDoController - TaskToDoObj

SceneController --> ListToDoController
SceneController --> TaskToDoController
SceneController --> HelpToDoMenuController
SceneController --> HelpToDoTaskController

@enduml